// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancel edit 1`] = `
<div
  aria-labelledby="comment-comment-with-replies-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-with-replies"
  id="comment-comment-with-replies"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-with-replies-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
            >
              remove
            </i>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-with-replies"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                >
                  <button
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantText Button-uppercase coral coral-comment-editButton CommentContainer-editButton"
                    data-testid="comment-edit-button"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon CommentContainer-editIcon"
                      >
                        edit
                      </i>
                      Edit
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "I like yoghurt",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                      >
                        thumb_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-with-replies"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                      >
                        reply
                      </i>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-with-replies"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                        >
                          share
                        </i>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Report comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                    data-testid="comment-report-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit a comment and handle server error: edit form 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div>
    <div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
      >
        <div>
          <span
            className="Username-root"
          >
            Markus
          </span>
        </div>
        <button
          className="BaseButton-root Timestamp-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <time
            className="RelativeTime-root Timestamp-text"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </button>
      </div>
    </div>
    <div
      className="coral coral-editComment EditCommentForm-root"
    >
      <form
        autoComplete="off"
        id="comments-postCommentForm-form"
        onSubmit={[Function]}
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <label
              className="AriaInfo-root"
              htmlFor="comments-editCommentForm-rte-comment-with-replies"
            >
              Edit comment
            </label>
            <div
              className="CommentForm-commentFormBox coral coral-commentForm"
            >
              <div
                role="none"
              >
                <div
                  className="coral coral-rte"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                  >
                    <div
                      aria-placeholder="Edit comment"
                      className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                      id="comments-editCommentForm-rte-comment-with-replies"
                    />
                  </div>
                  <div
                    className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                  >
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bold"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_bold
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Italic"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_italic
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Blockquote"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_quote
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bulleted List"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_list_bulleted
                      </i>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Message-root Message-colorGrey Message-fullWidth coral coral-editComment-remainingTime"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
            >
              alarm
            </i>
            <span>
              Edit: 
              <time
                className="RelativeTime-root"
                dateTime="2018-07-06T18:24:30.000Z"
                title="2018-07-06T18:24:30.000Z"
              >
                2018-07-06T18:24:30.000Z
              </time>
               remaining
            </span>
          </div>
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
          >
            <button
              className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-editComment-cancel"
              data-variant="outlined"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-editComment-submit"
              data-variant="filled"
              disabled={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Save changes
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`edit a comment: edit form 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div>
    <div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
      >
        <div>
          <span
            className="Username-root"
          >
            Markus
          </span>
        </div>
        <button
          className="BaseButton-root Timestamp-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <time
            className="RelativeTime-root Timestamp-text"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </button>
      </div>
    </div>
    <div
      className="coral coral-editComment EditCommentForm-root"
    >
      <form
        autoComplete="off"
        id="comments-postCommentForm-form"
        onSubmit={[Function]}
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <label
              className="AriaInfo-root"
              htmlFor="comments-editCommentForm-rte-comment-with-replies"
            >
              Edit comment
            </label>
            <div
              className="CommentForm-commentFormBox coral coral-commentForm"
            >
              <div
                role="none"
              >
                <div
                  className="coral coral-rte"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                  >
                    <div
                      aria-placeholder="Edit comment"
                      className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                      id="comments-editCommentForm-rte-comment-with-replies"
                    />
                  </div>
                  <div
                    className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                  >
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bold"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_bold
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Italic"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_italic
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Blockquote"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_quote
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bulleted List"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_list_bulleted
                      </i>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Message-root Message-colorGrey Message-fullWidth coral coral-editComment-remainingTime"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
            >
              alarm
            </i>
            <span>
              Edit: 
              <time
                className="RelativeTime-root"
                dateTime="2018-07-06T18:24:30.000Z"
                title="2018-07-06T18:24:30.000Z"
              >
                2018-07-06T18:24:30.000Z
              </time>
               remaining
            </span>
          </div>
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
          >
            <button
              className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-editComment-cancel"
              data-variant="outlined"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-editComment-submit"
              data-variant="filled"
              disabled={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Save changes
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`edit a comment: optimistic response 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div>
    <div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
      >
        <div>
          <span
            className="Username-root"
          >
            Markus
          </span>
        </div>
        <button
          className="BaseButton-root Timestamp-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <time
            className="RelativeTime-root Timestamp-text"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </button>
      </div>
    </div>
    <div
      className="coral coral-editComment EditCommentForm-root"
    >
      <form
        autoComplete="off"
        id="comments-postCommentForm-form"
        onSubmit={[Function]}
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <label
              className="AriaInfo-root"
              htmlFor="comments-editCommentForm-rte-comment-with-replies"
            >
              Edit comment
            </label>
            <div
              className="CommentForm-commentFormBox coral coral-commentForm"
            >
              <div
                role="none"
              >
                <div
                  className="coral coral-rte "
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container  RTE.module-contentEditableContainerDisabled"
                  >
                    <div
                      aria-placeholder="Edit comment"
                      className="RTE.module-contentEditable coral coral-rte-content RTE-content RTE-disabled RTE.module-contentEditableDisabled"
                      id="comments-editCommentForm-rte-comment-with-replies"
                    />
                  </div>
                  <div
                    className="coral coral-rte-toolbar RTE-toolbar  RTE.module-toolbarDisabled RTE.module-toolbarBottom Toolbar.module-toolbar"
                  >
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bold"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_bold
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Italic"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_italic
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Blockquote"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_quote
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bulleted List"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_list_bulleted
                      </i>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Message-root Message-colorGrey Message-fullWidth coral coral-editComment-remainingTime"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
            >
              alarm
            </i>
            <span>
              Edit: 
              <time
                className="RelativeTime-root"
                dateTime="2018-07-06T18:24:30.000Z"
                title="2018-07-06T18:24:30.000Z"
              >
                2018-07-06T18:24:30.000Z
              </time>
               remaining
            </span>
          </div>
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
          >
            <button
              className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-disabled Button-upperCase coral coral-editComment-cancel"
              data-variant="outlined"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-editComment-submit"
              data-variant="filled"
              disabled={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Save changes
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`edit a comment: render comment with edit button 1`] = `
<div
  aria-labelledby="comment-comment-with-replies-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-with-replies"
  id="comment-comment-with-replies"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-with-replies-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
            >
              remove
            </i>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-with-replies"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                >
                  <button
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantText Button-uppercase coral coral-comment-editButton CommentContainer-editButton"
                    data-testid="comment-edit-button"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon CommentContainer-editIcon"
                      >
                        edit
                      </i>
                      Edit
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "I like yoghurt",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                      >
                        thumb_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-with-replies"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                      >
                        reply
                      </i>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-with-replies"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                        >
                          share
                        </i>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Report comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                    data-testid="comment-report-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit a comment: server response 1`] = `
<div
  aria-labelledby="comment-comment-with-replies-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-with-replies"
  id="comment-comment-with-replies"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-with-replies-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
            >
              remove
            </i>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-with-replies"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                  <div
                    className="EditedMarker-root coral coral-comment-edited"
                  >
                    (
                    <span>
                      Edited
                    </span>
                    )
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                >
                  <button
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantText Button-uppercase coral coral-comment-editButton CommentContainer-editButton"
                    data-testid="comment-edit-button"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon CommentContainer-editIcon"
                      >
                        edit
                      </i>
                      Edit
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Edited! (from server)",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                      >
                        thumb_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-with-replies"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                      >
                        reply
                      </i>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-with-replies"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                        >
                          share
                        </i>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Report comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                    data-testid="comment-report-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows expiry message: edit form closed 1`] = `
<div
  aria-labelledby="comment-comment-with-replies-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-with-replies"
  id="comment-comment-with-replies"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-with-replies-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root IndentedComment-icon coral coral-comment-collapse-toggle-icon"
            >
              remove
            </i>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-with-replies"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                >
                  <button
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantText Button-uppercase coral coral-comment-editButton CommentContainer-editButton"
                    data-testid="comment-edit-button"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon CommentContainer-editIcon"
                      >
                        edit
                      </i>
                      Edit
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "I like yoghurt",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReactionButton-icon coral coral-reactButton coral-comment-reactButton"
                      >
                        thumb_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-with-replies"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReplyButton-icon"
                      >
                        reply
                      </i>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-with-replies"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm coral coral-icon PermalinkButton-icon"
                        >
                          share
                        </i>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-with-replies"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Report comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                    data-testid="comment-report-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows expiry message: edit time expired 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div>
    <div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
      >
        <div>
          <span
            className="Username-root"
          >
            Markus
          </span>
        </div>
        <button
          className="BaseButton-root Timestamp-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <time
            className="RelativeTime-root Timestamp-text"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </button>
      </div>
    </div>
    <div
      className="coral coral-editComment EditCommentForm-root"
    >
      <form
        autoComplete="off"
        id="comments-postCommentForm-form"
        onSubmit={[Function]}
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <label
              className="AriaInfo-root"
              htmlFor="comments-editCommentForm-rte-comment-with-replies"
            >
              Edit comment
            </label>
            <div
              className="CommentForm-commentFormBox coral coral-commentForm"
            >
              <div
                role="none"
              >
                <div
                  className="coral coral-rte "
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container  RTE.module-contentEditableContainerDisabled"
                  >
                    <div
                      aria-placeholder="Edit comment"
                      className="RTE.module-contentEditable coral coral-rte-content RTE-content RTE-disabled RTE.module-contentEditableDisabled"
                      id="comments-editCommentForm-rte-comment-with-replies"
                    />
                  </div>
                  <div
                    className="coral coral-rte-toolbar RTE-toolbar  RTE.module-toolbarDisabled RTE.module-toolbarBottom Toolbar.module-toolbar"
                  >
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bold"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_bold
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Italic"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_italic
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Blockquote"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_quote
                      </i>
                    </button>
                    <button
                      aria-pressed={false}
                      className="BaseButton-root RTEButton-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      title="Bulleted List"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-md coral coral-icon"
                      >
                        format_list_bulleted
                      </i>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="CallOut-root CallOut-error CallOut-leftBorder coral coral-editComment-expiredTime"
          >
            <div
              className="CallOut-container"
            >
              <div
                className="CallOut-icon CallOut-error CallOut-leftIcon"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon"
                >
                  error
                </i>
              </div>
              <div
                className="CallOut-content"
                role="alert"
              >
                <div
                  className="CallOut-title CallOut-titleSemiBold"
                >
                  Edit time has expired. You can no longer edit this comment. Why not post another one?
                </div>
                <div
                  className="CallOut-body"
                />
              </div>
            </div>
          </div>
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
          >
            <button
              className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-editComment-cancel"
              data-variant="outlined"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-editComment-submit"
              data-variant="filled"
              disabled={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Save changes
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
